--- a/src/combobox.css
+++ b/src/combobox.css
@@ -1,11 +1,30 @@
 .combo {
 padding:0 4px 0 4px ;
 background-color: @combobox;
-border-radius: 3px;
+/*border-radius: 3px;*/
 border:1px solid @combobox;
 caret-color: @combocaret;
 min-height: 16px;
 /*font-weight: bold;*/
+}
+
+entry, button {
+border-radius: 3px;
+}
+
+.linked {
+min-height:27px;
+border-radius: 3px;
+border-width:1px;
+border-style:solid;
+border-color:@combobox;
+background-color: @combobox;
+}
+
+.linked entry, .linked button{
+background-color: @combobox;
+border-radius: 0px;
+border:0px solid @combobox;
 }
 
 .combo box, combobox entry, combobox button:checked{
@@ -13,12 +32,12 @@ background-color: @combobox;
 color:@combobox-font;
 margin: 0;
 }
-
+/*
 combobox menu menuitem {
 background-color: @menu-bg;
 padding: 2px 12px;
 }
-
+*/
 combobox menu menuitem:hover{
 background-color: @selected-color;
 padding: 2px 12px;
