--- a/src/tooltip.css
+++ b/src/tooltip.css
@@ -1,10 +1,9 @@
 
 /* The border around a tooltip */
-.background {
-  background-color: @tooltip-bg;
-  border: 1px solid @tooltip-bg;
-}
 
+tooltip.background {
+  background-color: @tooltip-bg;
+}
 
 /* Removes "blurred" effect from tooltip label */
 tooltip {
@@ -14,6 +13,7 @@ tooltip {
   padding: 0;
   margin: 0;
 }
+
 tooltip * {
   background-color: @tooltip-bg;
   color: #000;
@@ -22,3 +22,4 @@ tooltip * {
   padding: 0;
   margin: 0;
 }
+
